# dade

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  sitemap.xml
.github/workflows/: ci.yml  doc.yml  test.yml
api/: index.html
assets/css/: styles.23468ad0.css
assets/js/: 17896441.024171be.js  17896441.c0d74620.js  1be78505.3bbaa36b.js  1be78505.ef9f0243.js  5fbc5cf1.c6c1fc70.js  5fbc5cf1.f6debeb6.js  608.3aa0a21d.js  608.434d9c1c.js  760671dd.0ec9e995.js  760671dd.68e0d558.js  760671dd.ad1bf8bc.js  8537ff5a.0b7a8c5f.js  8537ff5a.46a31659.js  8537ff5a.fc22ae4c.js  935f2afb.6f17ab4a.js  935f2afb.8f9ffc05.js  935f2afb.f3a5965c.js  c377a04b.316b4ffa.js  c377a04b.7527264e.js  fbe0794d.07524f31.js  fbe0794d.b3be2628.js  fbe0794d.bec49ad1.js  main.8205de06.js  main.f84d0153.js  runtime~main.9bb2a325.js  runtime~main.c273bf86.js  runtime~main.cb81ace0.js
dade_derive/: Cargo.toml
dade_derive/src/: fields.rs  lib.rs  terms.rs  types.rs
dade_macro/: Cargo.toml
dade_macro/src/: fields.rs  lib.rs  types.rs
docs/: .gitignore  docusaurus.config.js  package.json  sidebars.js
docs/docs/: api.md  index.md
docs/docs/usage/: fields.md  models.md  schema.md
src/: de.rs  dump.rs  error.rs  json.rs  lib.rs  load.rs  schema.rs  stream.rs
tests/: test_build.rs  test_json_dump.rs  test_json_load.rs  test_model.rs  test_models_with_enum.rs  test_models_with_named_struct.rs  test_models_with_unnamed_struct.rs  test_parsing.rs  test_roundtrip.rs  test_transform.rs
tests/data/: README.md  unicode.json  unicode_with_ascii.json
tests/models/String/fail/: expected.rs  ge.rs  lt.rs  max_length.rs  min_length.rs  validate.rs
tests/models/String/pass/: alias.rs  validate.rs
tests/models/bool/fail/: alias.rs  expected.rs  ge.rs  lt.rs  max_items.rs
tests/models/f32/fail/: alias.rs  expected.rs  ge.rs  le.rs  max_items.rs  max_length.rs  min_length.rs
tests/models/f32/pass/: default.rs
tests/models/f64/fail/: expected.rs  lt.rs  max_length.rs  min_length.rs  validate.rs
tests/models/f64/pass/: gt.rs
tests/models/i128/fail/: alias.rs  max_length.rs
tests/models/i128/pass/: ge.rs
tests/models/i16/fail/: gt.rs  lt.rs  max_items.rs  validate.rs
tests/models/i16/pass/: alias.rs  gt.rs  lt.rs  validate.rs
tests/models/i32/fail/: expected.rs  gt.rs  min_length.rs
tests/models/i32/pass/: ge.rs  gt.rs  le.rs
tests/models/i64/fail/: ge.rs  gt.rs  max_items.rs  validate.rs
tests/models/i64/pass/: le.rs  lt.rs
usage/fields/: index.html
usage/models/: index.html
usage/schema/: index.html
(+1964 files in other folders)
