[package]
name = "dade"
version = "0.1.3"
edition = "2021"
authors = ["odd <odd12258053@gmail.com>"]
description = "dade is data definition for Rust structures."
license = "MIT"
readme = "README.md"
repository = "https://github.com/odd12258053/dade"
keywords = ["dade", "data", "serialization"]
categories = ["data-structures", "encoding"]

[dependencies]
dade_derive = { version="0.1.3", path = "./dade_derive" }
indexmap = "1.8.0"

[workspace]
members = [
    "dade_derive",
]

[dev-dependencies]
