[package]
name = "dade"
version = "0.1.4"
edition = "2021"
authors = ["odd <odd12258053@gmail.com>"]
description = "dade is data definition for Rust structures."
license = "MIT"
readme = "README.md"
repository = "https://github.com/odd12258053/dade"
keywords = ["dade", "data", "serialization"]
categories = ["data-structures", "encoding"]

[dependencies]
dade_derive = { version="0.1.4", path = "./dade_derive" }

[workspace]
members = [
    "dade_derive",
]

[dev-dependencies]
paste = "1.0.6"
trybuild = "1.0.56"
