[package]
name = "dade"
version = "0.2.0"
edition = "2021"
authors = ["odd <odd12258053@gmail.com>"]
description = "dade is data definition for Rust structures."
license = "MIT"
readme = "README.md"
repository = "https://github.com/odd12258053/dade"
keywords = ["dade", "data", "serialization"]
categories = ["data-structures", "encoding"]

[dependencies]
dade_macro = { version="0.2.0", path = "./dade_macro" }

[workspace]
members = [
    "dade_macro",
]

[dev-dependencies]
paste = "1.0.6"
trybuild = "1.0.63"
