[package]
name = "dade_derive"
version = "0.1.1"
edition = "2021"
authors = ["odd <odd12258053@gmail.com>"]
description = "dade is data definition for Rust structures."
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/odd12258053/dade"
keywords = ["dade", "data", "serialization"]
categories = ["data-structures", "encoding"]

[lib]
name = "dade_derive"
proc-macro = true


[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
